[package]
name = "prob48"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.4.0"
chrono = "0.4"
fnv = "1.0.5"
num = "0.1"
permutohedron = "0.2"
time = "0.1"

[dev-dependencies]
bencher = "0.1.4"

[[bin]]
name = "prob48"
path = "prob48.rs"
